make opt in/out more transparent

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     </script>
   </head>
   <body>
-    <h1>Nimiq Funder Demo</h1>
+    <h1>Nimiq Funder - Funding Websites with Nimiq</h1>
+    <p>&copy; Richard LaFranchi 2018</p>
     <noscript>
-      <strong>We're sorry but nimiq-miner doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but nimiq-funder doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
     <div id="nimiq-funder"></div>
