Add auto starting (hides opt buttons)
With NIMIQ_AUTO_START you can hide the opt in and opt out buttons.

--- a/demo.html
+++ b/demo.html
@@ -16,6 +16,7 @@
   // var NIMIQ_ADDRESS = 'NQ42 2X..';
   // var NIMIQ_POOL_HOST = 'pool.nimiq.watch';
   // var NIMIQ_POOL_PORT = 8443;
+  // var NIMIQ_AUTO_START = false;
 </script>
 <script src="./nimiq-funder.umd.js"></script>
 </body>
