--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script>
       // var NIMIQ_ADDRESS = 'NQ..';
       // var NIMIQ_POOL_HOST = 'pool.nimiq.watch';
+      // var NIMIQ_AUTO_START = true;
     </script>
   </head>
   <body>
